# BrightNights

./: CMakeLists.txt  main.cpp
src/: dllmain.cpp
