cmake_minimum_required (VERSION 3.8)
project(BrightNights)
add_subdirectory(cwmods)
add_library (BrightNights SHARED "main.cpp")
target_link_libraries (BrightNights LINK_PUBLIC CWSDK)
target_include_directories (BrightNights PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/cwmods)
target_include_directories (BrightNights PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/cwmods/common)
target_include_directories (BrightNights PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/cwmods/cube)
target_include_directories (BrightNights PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/cwmods/gfx)
target_include_directories (BrightNights PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/cwmods/IDA)
target_include_directories (BrightNights PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/cwmods/msvc)
target_include_directories (BrightNights PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/cwmods/plasma)